<resources>
    <string name="app_name">Practica4</string>

    <string name="welcome_text">Welcome to the portales!</string>
    <string name="welcome_description">Taqueria los portales is quick, casual restaurant</string>
    <string name="button_start">get started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and condition of the Cheezery</string>
    <string name="sign_in">Sign in</string>

    <string name="our_menu">Our menu</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
</resources>