<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/iv_group2"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:src="@drawable/grupo2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_our_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <GridLayout
        android:id="@+id/gl_menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/btn_antojitos"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:text="@string/antojitos"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/btn_especialidades"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:text="@string/especialidades"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/btn_combinations"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:text="@string/combinations"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/btn_tortas"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:text="@string/tortas"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/btn_sopas"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:text="@string/sopas"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/btn_drinks"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:text="@string/drinks"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

    </GridLayout>
</LinearLayout>